# FibroSense

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FibroSense_Concept_Note_v2.docx  README.md  TECH_STACK_PROPOSAL.md  V2_ROADMAP.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  fibrosense.db-shm  fibrosense.db-wal  pyproject.toml  render.yaml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 217dbdf39456_initial_schema.py  a1b2c3d4e5f6_add_medications.py  b2c3d4e5f6a7_convert_pain_locations_format.py  c3d4e5f6a7b8_add_diet_flags.py  d4e5f6a7b8c9_add_users_and_multi_tenancy.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  biometric.py  contextual.py  correlation.py  medication.py  settings.py  symptom.py  sync_log.py  user.py
backend/app/routers/: auth.py  biometrics.py  contextual.py  correlations.py  demo_data.py  export.py  medications.py  settings_router.py  symptoms.py  sync.py
backend/app/schemas/: auth.py  biometric.py  contextual.py  correlation.py  demo_data.py  export.py  medication.py  settings.py  symptom.py  sync.py
backend/app/services/: analytics_service.py  export_service.py  oura_service.py  scheduler.py  weather_service.py
backend/scripts/: init_db.py  seed_fictitious_data.py
backend/tests/: conftest.py  test_health.py
backend/tests/models/: test_models.py
backend/tests/routers/: test_biometrics.py  test_contextual.py  test_correlations.py  test_export.py  test_medications.py  test_settings.py  test_symptoms.py  test_sync.py
(+98 files in other folders)
